# clinews

./: .env  .gitignore  Cargo.toml  README.md
newsapi/: Cargo.toml
newsapi/src/: lib.rs
src/: main.rs  theme.rs
