[package]
name = "clinews"
version = "0.1.0"
edition = "2018"
authors = ["WildCommunist <alex@ceres.ventures>"]
description = "A simple CLI client that reads news headlines from newsapi"
readme = "README.md"
repository = "https://github.com/wildcommunist/clinews"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
termimad = "0.14.2"
crossterm = "0.20.0"
thiserror = "1.0.30"
dotenv = "0.15.0"
newsapi = { path = "./newsapi" }